响应式ronyon开发进度50%

--- a/仿站/ronyon/productservice.html
+++ b/仿站/ronyon/productservice.html
@@ -8,9 +8,9 @@
         <link rel="stylesheet" href="css/swiper-3.4.2.min.css">
         <link rel="stylesheet" href="css/responsive-nav.css">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/productservice.css">
         <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
         <script src="js/responsive-nav.min.js"></script>
-        <script src="js/bootstrap.js"></script>
     </head>
     <body>
         <div class="nav-box">
@@ -25,8 +25,8 @@
                 </div>
                 <div class="nav-right navbar-right">
                     <ul class="clearfix">
-                    <li class="active"><a href="#">首页</a></li>
-                    <li><a href="./productservice.html">产品服务</a></li>
+                    <li><a href="index.html">首页</a></li>
+                    <li class="active"><a href="#">产品服务</a></li>
                     <li><a href="#">云服务</a></li>
                     <li><a href="#">成功案例</a></li>
                     <li><a href="#">关于我们</a></li>
@@ -38,25 +38,11 @@
             </div>
         </div>
         </div>
-        <div class="swiper-container">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="images/indexbanner-bg01.jpg" alt="First slide">
-                    <div class="carousel-caption">
-                        <img src="images/banner-text01.png"  alt="">
-                    </div>
-                </div>
-                <div class="swiper-slide"><img src="images/indexbanner-bg02.jpg" alt="Second slide">
-                    <div class="carousel-caption">
-                        <img src="images/banner-text01.png"  alt="">
-                    </div>
-                </div>
-                <div class="swiper-slide"><img src="images/indexbanner-bg03.jpg" alt="Third slide">
-                    <div class="carousel-caption">
-                        <img src="images/banner-text01.png"  alt="">
-                    </div>
-                </div>
+        <div class="banner">
+            <img src="images/indexbanner-bg01.jpg" alt="First slide">
+            <div class="carousel-caption">
+                <img src="images/banner-text01.png"  alt="">
             </div>
-            <div class="swiper-pagination"></div>
         </div>
         <div class="container">
             <h3 class="title">
@@ -182,156 +168,6 @@
                 </div>
             </div>
         </div>
-        <div class="scheme">
-            <div class="container">
-                <h3 class="title">
-                <p class="text-center">解决方案</p>
-                <img src="images/bt03.png" alt="">
-                </h3>
-                <p class="text-center">专业团队，为你提供针对性、个性的企业互联网+解决方案</p>
-                <div class="row solution">
-                    <div class="col-xs-6 col-md-3">
-                        <span class="solution-img">
-                        <div class="solution-warp">
-                            <span>
-                            <i></i>
-                            <p>融远生鲜电商解决方案是帮助传统生鲜行业快速进入电商领领域，真正解决如何获取客户，物流运输保障，产品质量控制，顾客回头率等生鲜难
-                            </p>
-                            </span>
-                        </div>
-                        <img src="./images/s01.png" alt="">
-                        <div class="solution-text text-center">
-                            <h5>医药电商解决方案</h5>
-                            <p>一对一解决方案</p>
-                        </div>
-                        </span>
-                    </div>
-                    <div class="col-xs-6 col-md-3">
-                        <span class="solution-img">
-                        <div class="solution-warp">
-                            <span>
-                            <i></i>
-                            <p>融远生鲜电商解决方案是帮助传统生鲜行业快速进入电商领领域，真正解决如何获取客户，物流运输保障，产品质量控制，顾客回头率等生鲜难
-                            </p>
-                            </span>
-                        </div>
-                        <img src="./images/s02.png" alt="">
-                        <div class="solution-text text-center">
-                            <h5>生鲜电商解决方案简介</h5>
-                            <p>一对一解决方案</p>
-                        </div>
-                        </span>
-                    </div>
-                    <div class="col-xs-6 col-md-3">
-                        <span class="solution-img">
-                        <div class="solution-warp">
-                            <span>
-                            <i></i>
-                            <p>融远生鲜电商解决方案是帮助传统生鲜行业快速进入电商领领域，真正解决如何获取客户，物流运输保障，产品质量控制，顾客回头率等生鲜难
-                            </p>
-                            </span>
-                        </div>
-                        <img src="./images/s03.png" alt="">
-                        <div class="solution-text text-center">
-                            <h5>020电商解决方案</h5>
-                            <p>一对一解决方案</p>
-                        </div>
-                        </span>
-                    </div>
-                    <div class="col-xs-6 col-md-3">
-                        <span class="solution-img">
-                        <div class="solution-warp">
-                            <span>
-                            <i></i>
-                            <p>融远生鲜电商解决方案是帮助传统生鲜行业快速进入电商领领域，真正解决如何获取客户，物流运输保障，产品质量控制，顾客回头率等生鲜难
-                            </p>
-                            </span>
-                        </div>
-                        <img src="./images/s04.png" alt="">
-                        <div class="solution-text text-center">
-                            <h5>生鲜电商解决方案简介</h5>
-                            <p>一对一解决方案</p>
-                        </div>
-                        </span>
-                    </div>
-                    <div class="button">
-                        <a class="btn btn-lg" role="button">查看更多</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="case">
-            <div class="container">
-                <h3 class="title">
-                <p class="text-center">成功案例</p>
-                <img src="images/bt04.png" alt="">
-                </h3>
-                <div class="row case-box">
-                    <div class="col-xs-6 col-md-4">
-                        <div class="case-img">
-                            <img src="images/case02.jpg" alt="">
-                            <div class="warp">
-                                <i></i>
-                                <a class="warp-link" href="#"></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-6 col-md-4">
-                        <div class="case-img">
-                            <img src="images/case02.jpg" alt="">
-                            <div class="warp">
-                                <i></i>
-                                <a class="warp-link" href="#"></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-6 col-md-4">
-                        <div class="case-img">
-                            <img src="images/case03.jpg" alt="">
-                            <div class="warp">
-                                <i></i>
-                                <a class="warp-link" href="#"></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-6 col-md-3">
-                        <div class="case-img">
-                            <img src="images/case04.jpg" alt="">
-                            <div class="warp">
-                                <i></i>
-                                <a class="warp-link" href="#"></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-6 col-md-3">
-                        <div class="case-img">
-                            <img src="images/case05.jpg" alt="">
-                            <div class="warp">
-                                <i></i>
-                                <a class="warp-link" href="#"></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-6 col-md-3">
-                        <div class="case-img">
-                            <img src="images/case06.jpg" alt="">
-                            <div class="warp">
-                                <i></i>
-                                <a class="warp-link" href="#"></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-6 col-md-3 more">
-                        <a href="#">
-                        <span class="more-main">
-                        <p class="text-center"><strong>...</strong></p>
-                        <p class="text-center">More</p>
-                        </span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="footer">
             <div class="container">
                 <div class="row footer-info">
@@ -369,12 +205,6 @@
         </div>
         <script src="js/swiper-3.4.2.jquery.min.js"></script>
         <script>
-            var mySwiper = new Swiper('.swiper-container', {
-                    pagination : '.swiper-pagination',
-                    paginationClickable :true,
-                    loop : true,
-                    autoplay: 5000,//可选选项，自动滑动
-            })
             var navigation = responsiveNav("#nav", { // Selector: The ID of the wrapper
                 animate: true, // Boolean: 是否启动CSS过渡效果（transitions）， true 或 false
                 transition: 400, // Integer: 过渡效果的执行速度，以毫秒（millisecond）为单位
