--- a/仿站/ronyon/productservice.html
+++ b/仿站/ronyon/productservice.html
@@ -39,9 +39,9 @@
         </div>
         </div>
         <div class="banner">
-            <img src="images/indexbanner-bg01.jpg" alt="First slide">
+            <img src="images/productbanner_bg.jpg" alt="First slide">
             <div class="carousel-caption">
-                <img src="images/banner-text01.png"  alt="">
+                <img src="images/productbanner_text.png"  alt="">
             </div>
         </div>
         <div class="container">
