ronyon三个页面完成

--- a/仿站/ronyon/index.html
+++ b/仿站/ronyon/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <title>首页 广州融远科技 微信开发 APP开发 电商系统开发 网站开发 OpenCart开发 OpenCart插件 OpenCart模版 </title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link href="css/bootstrap.css" rel="stylesheet">
@@ -27,6 +28,7 @@
                     <ul class="clearfix">
                     <li class="active"><a href="#">首页</a></li>
                     <li><a href="./productservice.html">产品服务</a></li>
+                    <li><a href="solution.html">解决方案</a></li>
                     <li><a href="#">云服务</a></li>
                     <li><a href="#">成功案例</a></li>
                     <li><a href="#">关于我们</a></li>
@@ -255,7 +257,7 @@
                         </span>
                     </div>
                     <div class="button">
-                        <a class="btn btn-lg" role="button">查看更多</a>
+                        <a class="btn btn-lg" role="button" href="solution.html">查看更多</a>
                     </div>
                 </div>
             </div>
