--- a/仿站/ronyon/productservice.html
+++ b/仿站/ronyon/productservice.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <title>解决方案 广州融远科技 微信开发 APP开发 电商系统开发 网站开发 OpenCart开发 OpenCart插件 OpenCart模版</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link href="css/bootstrap.css" rel="stylesheet">
@@ -26,7 +27,8 @@
                 <div class="nav-right navbar-right">
                     <ul class="clearfix">
                     <li><a href="index.html">首页</a></li>
-                    <li class="active"><a href="#">产品服务</a></li>
+                    <li class="active"><a href="productservice.html">产品服务</a></li>
+                    <li><a href="solution.html">解决方案</a></li>
                     <li><a href="#">云服务</a></li>
                     <li><a href="#">成功案例</a></li>
                     <li><a href="#">关于我们</a></li>
