简历再次修改

--- a/resume/index.html
+++ b/resume/index.html
@@ -25,6 +25,15 @@
 					<span class="xinxi-title">Github: </span><span>
                     <a href="https://github.com/XSnowHoly" target="_blank">https://github.com/XSnowHoly</a>
                     </span>
+                    <span class="xinxi-title">个人博客: </span><span>
+                    <a href="http://www.jianshu.com/u/6072afe3db37" target="_blank">简书地址</a>
+                    </span>
+                    <div class="quick-mark">
+                        <span class="xinxi-title">博客二维码: </span>
+                        <span>
+                            <embed class="qr-code" src="images/my-jianshu.svg" type="">
+                        </span>
+                    </div>             
 				</div>
 				<div class="contact">
 					<div class="adorn"><h2 class="iconfontyyy icon-contact">联系方式</h2></div>
@@ -58,7 +67,7 @@
         		<h3 class="iconfontyyy icon-gongzuo">工作经验</h3>
         		<h4>前端开发</h4>
         		<h4>广州铭扬影视传媒公司</h4>
-        		<span>2016-11~2017-06</span>
+        		<span>2016-08~2017-06</span>
         		<span>公司官网前端开发和后台维护</span>
         	</div>
         	<div class="skill">
@@ -73,11 +82,14 @@
                 <h4>框架&工具</h4>
                 <span>熟练使用 <strong>sublime、Git、Node.js</strong>  命令行等开发工具。</span>
                 <span>熟悉 <strong>requirejs、gulp 、webpack </strong>等前端构建工具，打包代码和实现代码的模块化。</span>
-                <span>了解<strong>BootStrap</strong> 的基本用法。</span>
+                <span>熟悉<strong>BootStrap</strong> 的基本用法。</span>
                 <span>了解掌握<strong>Chrome开发者工具</strong>和<strong>Firebug</strong>，可快速寻找bug。</span>
         	</div>	
             <div class="demo">
                 <h3 class="iconfontyyy icon-xiangmu">项目作品</h3>
+                <h4>一个互联网企业站</h4>
+                <span>使用技术：HTML5、CSS3、jQuery、BootStrap</span>
+                <span>地址: <a href="https://xsnowholy.github.io/jirengu/仿站/ronyon/" target="_blank">https://xsnowholy.github.io/jirengu/仿站/ronyon/</a></span>
                 <h4>一个漫画作品介绍网站</h4>
                 <span>使用技术：HTML5、CSS3、jQuery、requireJs、媒体查询</span>
                 <span>地址: <a href="https://xsnowholy.github.io/jirengu/jojo/" target="_blank">https://xsnowholy.github.io/jirengu/jojo/</a></span>
