--- a/仿站/ronyon/index.html
+++ b/仿站/ronyon/index.html
@@ -24,8 +24,8 @@
                     <img src="images/logo.png" alt="ronyon">
                     </a>
                 </div>
-                <div class="nav-right navbar-right">
-                    <ul class="clearfix">
+                <div id="nav-ul" class="nav-right navbar-right">
+                    <ul class="clearfix list-unstyled">
                     <li class="active"><a href="#">首页</a></li>
                     <li><a href="./productservice.html">产品服务</a></li>
                     <li><a href="solution.html">解决方案</a></li>
