--- a/仿站/ronyon/solution.html
+++ b/仿站/ronyon/solution.html
@@ -32,7 +32,7 @@
                             <li class="active"><a href="solution.html">解决方案</a></li>
                             <li><a href="#">云服务</a></li>
                             <li><a href="#">成功案例</a></li>
-                            <li><a href="#">关于我们</a></li>
+                            <li><a href="about.html">关于我们</a></li>
                             <div class="phonetitle navbar-left">
                                 <a href="tel:13378466580">13378466580</a>
                             </div>
