--- a/仿站/robot/index.html
+++ b/仿站/robot/index.html
@@ -3,10 +3,20 @@
     <head>
         <meta charset="utf-8">
         <title>浙江大学机器人研究院</title>
+        <meta name="renderer" content="webkit|ie-comp|ie-stand">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
+        <meta http-equiv="Cache-Control" content="no-siteapp" />
+        <!--[if lt IE 9]>
+        <script type="text/javascript" src="lib/html5shiv.js"></script>
+        <script type="text/javascript" src="lib/respond.min.js"></script>
+        <![endif]-->
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/style.css">
+        <!--[if IE 6]>
+        <script type="text/javascript" src="lib/DD_belatedPNG_0.0.8a-min.js" ></script>
+        <script>DD_belatedPNG.fix('*');</script>
+        <![endif]-->
         <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
         <script src="js/bootstrap.js"></script>
     </head>
@@ -15,7 +25,7 @@
             <div class="container">
                 <div class="navbar-header">
                     <a href="#" class="navbar-brand">
-                    <img src="images/log.png">
+                    <img src="images/logo.png">
                     </a>
                     <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
@@ -27,6 +37,7 @@
                     <div class="navbar-right menu-box">
                         <div class="tel-info">
                             <div class="tel-box">
+                                <img src="images/phone.png" height="19" width="14" alt="">
                                 <span>+86-18868819055</span>
                                 <i>|</i>
                                 <a href="">
@@ -46,11 +57,49 @@
                                     <a href="">大事记</a>
                                 </div>
                             </li>
-                            <li><a href="#">新闻中心</a></li>
-                            <li><a href="#">科研工作</a></li>
-                            <li><a href="#">产业孵化</a></li>
-                            <li><a href="#">聚贤纳才</a></li>
-                            <li><a href="#">联系我们</a></li>
+                            <li>
+                                <a href="#">新闻中心</a>
+                                <div class="child-menu">
+                                    <a href="">通知公告</a>
+                                    <a href="">最新动态</a>
+                                    <a href="">行业新闻</a>
+                                    <a href="">媒体关注</a>
+                                    <a href="">视频中心</a>
+                                </div>
+                            </li>
+                            <li>
+                                <a href="#">科研工作</a>
+                                <div class="child-menu">
+                                    <a href="">研发团队</a>
+                                    <a href="">核心技术</a>
+                                    <a href="">成果展示</a>
+                                    <a href="">实验室与平台</a>
+                                    <a href="">学术交流</a>
+                                    <a href="">国际合作</a>
+                                </div>
+                            </li>
+                            <li>
+                                <a href="#">产业孵化</a>
+                                <div class="child-menu">
+                                    <a href="">孵化基地</a>
+                                    <a href="">投资公司</a>
+                                </div>
+                            </li>
+                            <li>
+                                <a href="#">聚贤纳才</a>
+                                <div class="child-menu">
+                                    <a href="">招聘信息</a>
+                                    <a href="">公告公示</a>
+                                </div>
+                            </li>
+                            <li>
+                                <a href="#">联系我们</a>
+                                <div class="child-menu">
+                                    <a href="">联系方式</a>
+                                    <a href="">电子地图</a>
+                                    <a href="">友情链接</a>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -107,7 +156,13 @@
                     </div>
                 </div>
                 <div class="col-rg col-lb-12">
-                    <img src="images/gen-4.jpg" alt="">
+                    <div class="general-content">
+                        <h3>浙江大学机器人研究院</h3>
+                        <p>研究院成立于2017年05月16日，是在浙江省委省政府以及宁波市委市政府直接指导和支持下，名校浙江大学与经济强市余姚战略合作的重大举措，是双方瞄准机器人及智能装备领域的人才培养、技术研发及产业培育建立的一个重大创新平台......</p>
+                        <a href="">MORE</a>
+                    </div>
+                    <img src="images/1_38.png"
+                     alt="">
                 </div>
             </div>
         </div>
@@ -146,6 +201,23 @@
                 <img src="images/team.png" alt="">
                 <h2>领导团队</h2>
             </div>
+            <div class="row content-box">
+                    <div class="col-mb col-mb-6">
+                        <img src="images/1_56.png" alt="">
+                    </div>
+                    <div class="col-mb col-mb-6">
+                        <img src="images/1_57.png" alt="">
+                    </div>
+                    <div class="col-mb col-mb-6">
+                        <img src="images/1_58.png" alt="">
+                    </div>
+                    <div class="col-mb col-mb-6">
+                        <img src="images/1_59.png" alt="">
+                    </div>
+                    <div class="col-mb col-mb-6">
+                        <img src="images/1_60.png" alt="">
+                    </div>
+                </div>
             <a href="" class="btn btn-team center-block">了解更多</a>
         </div>
         <section class="news-box">
@@ -205,6 +277,84 @@
                 </div>
             </div>
         </div>
+        <section class="friend-link">
+            <div class="container link-box text-center">
+                <div class="title-box center-block">
+                    <img src="images/link-bg.png" alt="">
+                    <h2>友情链接</h2>
+                </div>
+                <div class="row">
+                    <div class="col-md-4 col-sm-6">
+                        <a href="">
+                            <img src="images/1_120.png" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <a href="">
+                            <img src="images/1_122.png" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <a href="">
+                            <img src="images/1_124.png" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4 col-sm-6">
+                        <a href="">
+                            <img src="images/1_120.png" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <a href="">
+                            <img src="images/1_122.png" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <a href="">
+                            <img src="images/1_124.png" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4 col-sm-6">
+                        <a href="">
+                            <img src="images/1_120.png" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <a href="">
+                            <img src="images/1_122.png" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <a href="">
+                            <img src="images/1_124.png" alt="">
+                        </a>
+                    </div>
+                </div>
+                <a href="" class="btn btn-team center-block">了解更多</a>
+            </div>
+        </section>
+        <section class="map">
+            <div class="container map-box">
+                <div class="map-info">
+                    <div class="map-info-header">
+                        <h3>联系我们</h3>
+                        <p>CONTACT US</p>
+                    </div>
+                    <span><i class="icon icon-name"></i>叶绍干</span>
+                    <span><i class="icon icon-phone"></i>+86-18868819055</span>
+                    <span><i class="icon icon-email"></i>shaoganye@zju.edu.cn</span>
+                    <span><i class="icon icon-address"></i>余姚市凤山街道冶山路475号科创大厦12楼</span>
+                    <span><i class="icon icon-postcode"></i>315400</span>
+                </div>
+            </div>
+            <a href="" class="btn-top">
+                <img src="images/top.png" height="71" width="74" alt="">
+            </a>
+        </section>
         <footer>
             <div class="container footer-box">
                 <div class="row">
