--- a/html5-show/register/index.html
+++ b/html5-show/register/index.html
@@ -4,11 +4,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>省医APP演示</title>
+    <title>省医APP挂号演示</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
-    <meta name="description" content="今夜，给自己加戏">
+    <meta name="description" content="省医APP演示">
     <link rel="stylesheet" type="text/css" href="css/base.css" media="all">
-    <link rel="shortcut icon" type="image/x-icon" href="http://shared.youdao.com/market/xijing/img/share.jpg">
     <script>
     var _hmt = _hmt || [];
     (function() {
