--- a/html5-show/register/index.html
+++ b/html5-show/register/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>省医APP挂号演示</title>
+    <title>省医通微信/支付宝挂号演示</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
     <meta name="description" content="省医APP演示">
     <link rel="stylesheet" type="text/css" href="css/base.css" media="all">
