--- a/仿站/robot/index.html
+++ b/仿站/robot/index.html
@@ -21,6 +21,7 @@
         <script src="js/bootstrap.js"></script>
     </head>
     <body>
+        <!-- 导航条区域 -->
         <nav class="nav navbar-fixed-top" role="navgation">
             <div class="container">
                 <div class="navbar-header">
@@ -105,6 +106,7 @@
                 </div>
             </div>
         </nav>
+        <!-- 轮播图区域 -->
         <div class="container-fluid carousel-box">
             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
@@ -142,6 +144,7 @@
                 </a>
             </div>
         </div>
+        <!-- 概况介绍 -->
         <div class="container general text-center">
             <div class="title-box center-block">
                 <img src="images/general.png" alt="">
@@ -166,6 +169,7 @@
                 </div>
             </div>
         </div>
+        <!-- 研究方向 -->
         <section class="main-box">
             <div class="container main text-center">
                 <div class="title-box center-block">
@@ -196,6 +200,7 @@
                 </div>
             </div>
         </section>
+        <!-- 领导团队 -->
         <div class="container team text-center">
             <div class="title-box center-block">
                 <img src="images/team.png" alt="">
@@ -203,23 +208,34 @@
             </div>
             <div class="row content-box">
                     <div class="col-mb col-mb-6">
-                        <img src="images/1_56.png" alt="">
+                        <a href="">
+                            <img src="images/1_56.png" alt="">
+                        </a>
                     </div>
                     <div class="col-mb col-mb-6">
-                        <img src="images/1_57.png" alt="">
+                        <a href="">
+                            <img src="images/1_57.png" alt="">
+                        </a>
                     </div>
                     <div class="col-mb col-mb-6">
-                        <img src="images/1_58.png" alt="">
+                        <a href="">
+                            <img src="images/1_58.png" alt="">
+                        </a>
                     </div>
                     <div class="col-mb col-mb-6">
-                        <img src="images/1_59.png" alt="">
+                        <a href="">
+                            <img src="images/1_59.png" alt="">
+                        </a>
                     </div>
                     <div class="col-mb col-mb-6">
-                        <img src="images/1_60.png" alt="">
+                        <a href="">
+                            <img src="images/1_60.png" alt="">
+                        </a>
                     </div>
                 </div>
             <a href="" class="btn btn-team center-block">了解更多</a>
         </div>
+        <!-- 新闻中心 -->
         <section class="news-box">
             <div class="container text-center">
                 <div class="title-box news-title center-block">
@@ -277,6 +293,7 @@
                 </div>
             </div>
         </div>
+        <!-- 友情连接 -->
         <section class="friend-link">
             <div class="container link-box text-center">
                 <div class="title-box center-block">
@@ -337,6 +354,7 @@
                 <a href="" class="btn btn-team center-block">了解更多</a>
             </div>
         </section>
+        <!-- 地图信息 -->
         <section class="map">
             <div class="container map-box">
                 <div class="map-info">
@@ -355,6 +373,7 @@
                 <img src="images/top.png" height="71" width="74" alt="">
             </a>
         </section>
+        <!-- 尾部区域 -->
         <footer>
             <div class="container footer-box">
                 <div class="row">
